--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,10 @@
   become: yes
 
   tasks:
-  - name: install htop
+  - name: install packages
     package: 
-      name: htop
+      name: 
+        - htop
+        - neofetch
+        - tmux
+        - vim-nox
