--- a/local.yml
+++ b/local.yml
@@ -11,3 +11,22 @@
         - neofetch
         - tmux
         - vim-nox
+  
+  - name: copy wallpaper file
+    copy:
+      src: files/basic-wp.jpg
+      dest: /usr/share/backgrounds/basic-wp.jpg
+      owner: root
+      group: root
+  
+  - name: set wallpaper
+    become_user: czar
+    dconf:
+      key: "/org/gnome/desktop/background/picture-uri"
+      value: "'file:///usr/share/background/basic-wp.jpg'"
+  
+  - name: set wallpaper position
+    become_user: czar
+    dconf:
+      key: "/org/gnome/desktop/background/picture-options"
+      value: "'zoom'"
